--- a/api.yaml
+++ b/api.yaml
@@ -2,10 +2,10 @@
 # Last pushed to master branch: ?
 # Last change to master branch: ?
 # Last pushed to dev branch: ?
-# Last change to master branch: ?
+# Last change to dev branch: ?
 #
 # DEPLOYMENT INFO
-# Last deployed dev version: ?
+# Last deployed dev version: 2016-05-10T18:54:13+CEST
 # Last deployed prod version: ?
 # command: gcloud preview app deploy api.yaml
 # args:
@@ -13,7 +13,7 @@
 #   --version prod|dev  # Indicates version to use. If 'Prod', --promote flag should be used
 #   --promote  # Optional, removes the version id from the deployment URL. Skip for testing and/or dev version
 
-module: api
+module: api-module
 runtime: python27
 api_version: 1
 threadsafe: yes
