--- a/api.yaml
+++ b/api.yaml
@@ -1,12 +1,12 @@
 # CODEBASE INFO
-# Last pushed to master branch: 2016-05-13T09:27:19+CEST
-# Last change to master branch: Working 'count' download method
+# Last pushed to master branch: 2016-05-13T12:20:53+CEST
+# Last change to master branch: Working API!
 # Last pushed to dev branch: ?
 # Last change to dev branch: ?
 #
 # DEPLOYMENT INFO
-# Last deployed dev version: 2016-05-13T09:26:56+CEST
-# Last deployed prod version: ?
+# Last deployed dev version: 2016-05-13T12:17:55+CEST
+# Last deployed prod version: 2016-05-13T12:21:05+CEST
 # command: gcloud preview app deploy api.yaml
 # args:
 #   --project vertnet-portal  # Optional, no need if gcloud is configured to use this project
@@ -18,6 +18,7 @@
 #   - DownloadHandler: make handler return JSON with result
 #   - DownloadHandler: if efficient count is implemented, activate direct download when count<=1K
 #   - CountHandler: optimize count retrieval
+#   - Download*: Check if we could skip the use of oauth2 creds and just use cloudstorage module
 
 module: api-module
 runtime: python27
