Finished refactoring FeedbackApi

--- a/api.yaml
+++ b/api.yaml
@@ -1,8 +1,8 @@
 # CODEBASE INFO
 # Last pushed to master branch: 2016-05-13T12:20:53+CEST
 # Last change to master branch: Working API!
-# Last pushed to dev branch: ?
-# Last change to dev branch: ?
+# Last pushed to dev branch: 2016-05-13T12:21:49+CEST
+# Last change to dev branch: Working API!
 #
 # DEPLOYMENT INFO
 # Last deployed dev version: 2016-05-13T12:17:55+CEST
