--- a/api.yaml
+++ b/api.yaml
@@ -20,7 +20,7 @@
 #   - CountHandler: optimize count retrieval
 #   - Download*: Check if we could skip the use of oauth2 creds and just use cloudstorage module
 
-module: api-module
+service: api-module
 runtime: python27
 api_version: 1
 threadsafe: yes
