--- a/api.yaml
+++ b/api.yaml
@@ -27,7 +27,9 @@ threadsafe: yes
 
 handlers:
 
-- url: /api/*.*
+- url: /apitracker*.*
+  script: api.handlers
+- url: /api/v1/*.*
   script: api.handlers
 
 - url: /service/*.*
@@ -40,4 +42,9 @@ libraries:
 #   version: latest
 
 skip_files:
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
 - ^data$
